--- a/css/main.css
+++ b/css/main.css
@@ -364,7 +364,6 @@ body {
 }
 
 body {
-  background-color: #E5E5E5;
   font-family: 'Montserrat';
   margin: 0;
   background: linear-gradient(90deg,
@@ -381,6 +380,7 @@ body {
 }
 
 .wrapper {
+  max-width: 1000px;
   padding-left: 180px;
   padding-top: 28px;
   padding-right: 30px;
@@ -420,8 +420,7 @@ h1 {
 }
 
 input {
-  background: #FFFFFF;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
+  background-color: ivory;
   border: 1px solid #b9b9b9eb;
   height: 28px;
   border-radius: 4px;
